@@ -1,3 +1,8 @@
+2006-08-21  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/BaseAssemblyResolver.cs:
+		Look for assemblies in ./ first
+
 2006-08-17  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/BaseAssemblyResolver.cs:
